// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeviceSelector should render empty device list 1`] = `
Array [
  <div
    className="core-padded-row core-device-selector dropdown"
    disabled={true}
    id="device-selector"
    onKeyDown={[Function]}
  >
    <button
      aria-expanded={false}
      aria-haspopup={true}
      className="dropdown-toggle btn btn-primary"
      disabled={false}
      onClick={[Function]}
      title="No devices available (Alt+P)"
      type="button"
    >
      No devices available
    </button>
  </div>,
  <div
    className="core-device-port-indicator off"
  />,
]
`;

exports[`DeviceSelector should render one device with serialport, usb, and jlink traits 1`] = `
Array [
  <div
    className="core-padded-row core-device-selector dropdown"
    disabled={false}
    id="device-selector"
    onKeyDown={[Function]}
  >
    <button
      aria-expanded={false}
      aria-haspopup={true}
      className="dropdown-toggle btn btn-primary"
      disabled={false}
      onClick={[Function]}
      title="Select device (Alt+P)"
      type="button"
    >
      Select device
    </button>
  </div>,
  <div
    className="core-device-port-indicator off"
  />,
]
`;
